# xlsx2md

./: .gitignore  README.md  make_sample.py  make_sample_diagram.py  pyproject.toml  xlsx2md_requirements.md
.github/workflows/: windows-build.yml
packaging/: entry.py
xlsx2md/: __init__.py  cli.py  converter.py  debug.py  extract.py  interpret.py  mermaid.py  pipeline.py  render.py  segment.py  shapes.py  verify.py
